# chaoss-microtasks

./: README.md
microtask-0/: README.md
microtask-1/: README.md
microtask-10/: README.md
microtask-2/: README.md  perceval_script.py
microtask-2/GitHub_backend/: github_issue.json  github_perceval.py  github_pr.json  github_repo.json
microtask-2/GitLab_backend/: gitlab_issue.json  gitlab_mr.json  gitlab_perceval.py  gitlab_pr.json
microtask-3/: README.md
microtask-4/: README.md
microtask-5/: README.md
microtask-5/data/: docker-compose.yml  projects.json  setup.cfg
microtask-6/: README.md
microtask-7/: README.md  elasticdump_script
microtask-7/data/: git_chaoss_enriched_mapping.json
microtask-8/: README.md
microtask-8/data/: config.ini  groupsio.csv  groupsio.json  groupsio.xlsx  import_gsheets.py  projects.json  script.py  setup.cfg
microtask-9/: README.md
