[general]
short_name = Grimoire
update = false
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 100
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100
menu_file = ../menu.yaml
aliases_file = ../aliases.json

[projects]
projects_file = ./projects.json

[es_collection]
url = http://admin:admin@localhost:9200

[es_enrichment]
url = http://admin:admin@localhost:9200

[sortinghat]
host = 127.0.0.1
user = root
password =
database = test_sh
load_orgs = true
orgs_file = data/orgs_sortinghat.json
identities_api_token = 'xxxx'
identities_file = [data/perceval_identities_sortinghat.json]
affiliate = true
unaffiliated_group = Unknown
autoprofile = [customer,git,github]
matching = [email]
sleep_for = 120

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "git"
kibiter_url = http://admin:admin@localhost:5601
community = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[groupsio]
raw_index = groupsio_raw
enriched_index = groupsio_enriched
email = {email}
password = {password}
